// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordingTab.vue it has the correct pristine / empty state 1`] = `
<div
  class="tab results-tab"
>
  <div
    class="content"
  >
    <div
      class="generated-code"
    >
      <pre>
              
        <code>
          No code yet...
        </code>
        
    
      </pre>
    </div>
  </div>
</div>
`;

exports[`RecordingTab.vue it show a code box when there is code 1`] = `
<div
  class="tab results-tab"
>
  <div
    class="content"
  >
    <div
      class="generated-code"
    >
      <pre>
        <code
          class="javascript"
        />
      </pre>
    </div>
  </div>
</div>
`;
